index.html dosyası degistirildi

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     Hobilerim arasında kahve hazırlamak var keyif aldığım şeylerin başında geliyor.
 </p>
 <p>Öğrenme sürecinde bana destek olan herkese çok teşekkür ederim.</p>
-<p>Teşekkürler Kodluyoruz.org</p>
+<p>Teşekkürler, Kodluyoruz.org</p>
 <!--Paragraf-->
 <h2>Sevdiğim Film</h2>
 <h3>The Revenant (Diriliş)</h3>
