index.html degisti

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     30 yaşındayım ve Bursa'da yaşıyorum
     Kodluyoruz.org aracılığı ile yazılım öğreniyorum.
     Çok keyifli, heyecanlı ve öğretici bir sürecin içindeyim.
-    Hobilerim arasında kahve hazırlamak var keyif aldığım şeylerin başında geliyor.
+    Hobilerim arasında kahve hazırlamak var, keyif aldığım şeylerin başında geliyor.
 </p>
 <p>Öğrenme sürecinde bana destek olan herkese çok teşekkür ederim.</p>
 <p>Teşekkürler, Kodluyoruz.org</p>
