--- a/index.html
+++ b/index.html
@@ -1,18 +1,57 @@
-<h1>Mert Erşişko</h1>
+<h1><strong id="ust">Mert Erşişko</strong></h1>
+<hr>
 <!--Başlık-->
-<h3>Hakkımda</h3>
+<h2><strong>Hakkımda</strong></h2>
 <!-- Alt başlık-->
-<p>Merhaba, Ben Mert Erşişko
-    30 yaşındayım ve Bursa'da yaşıyorum
-    Kodluyoruz.org aracılığı ile yazılım öğreniyorum.
+<p> Merhaba, Ben Mert Erşişko
+    30 yaşındayım ve Bursa'da yaşıyorum 
+    <a href="https://kodluyoruz.org" target="_blank">
+    kodluyoruz.org
+    </a>
+    aracılığı ile yazılım öğreniyorum.
     Çok keyifli, heyecanlı ve öğretici bir sürecin içindeyim.
     Hobilerim arasında kahve hazırlamak var, keyif aldığım şeylerin başında geliyor.
 </p>
 <p>Öğrenme sürecinde bana destek olan herkese çok teşekkür ederim.</p>
-<p>Teşekkürler, Kodluyoruz.org</p>
-<!--Paragraf-->
-<h2>Sevdiğim Film</h2>
-<h3>The Revenant (Diriliş)</h3>
-<p>2015 yapımı Leonardo DiCaprio'nun oynadığı büyük  bir hayatta kalma
-    mücadelesi gösterdiği bir filmdir.
+<p>Teşekkürler, 
+    <a href="https://kodluyoruz.org" target="_blank">
+        Kodluyoruz.org
+</a> 
 </p>
+<hr>
+<h3>İlgi Alanlarım</h3>
+<ol type="1">
+    <li><b>Film</b>
+        <ul>
+            <li><a href="https://www.imdb.com/title/tt1663202/?ref_=nv_sr_srsg_0" target="_blank">The Revenant</a></li>
+            <li>Catch me if you can</li>
+            <li>Limitless</li>
+        </ul>
+    </li>
+    <li><b>Dizi</b>
+        <ul>
+            <li><a href="https://www.imdb.com/title/tt2442560/?ref_=nv_sr_srsg_0" target="_blank">Peaky Blinders
+            </a></li>
+            <li>Squid Game</li>
+            <li>La Casa de Papel</li>
+        </ul>
+    </li>
+    <li><b>Kitap</b>
+        <ul>
+            <li><a href="https://www.goodreads.com/book/show/35222835-ustal-k-gerektiren-kafaya-takmama-sanat?from_search=true&from_srp=true&qid=PURY5kfX7O&rank=1" target="_blank">Ustalık gerektiren kafaya takmama sanatı</a></li>
+            <li>Ikıgai</li>
+            <li>Beden Dilin</li>
+        </ul>
+    </li>
+</ol>
+<hr>
+<div>
+    <h3>Sevdiğim Film</h3>
+    <p><b>The Revenant</b></p>
+    <img width="200" height="400" src="images/1.jpeg" title="The Revenant" alt="The Revenant">
+    <p><b>Diriliş,</b>  Alejandro G. Iñárritu'nun yönettiği, 2016 yılında gösterime giren biyografik western gerilim filmi. Senaryo Michael Punke'nin 2002'de yayınlanan aynı adlı romanından uyarlanarak Iñárritu ve Mark L. Smith tarafından yazıldı. Filmde sınır sakini Hugh Glass'ın hayatından esinlenildi.</p>
+</div>
+<hr>
+<a href="#ust">
+    <b>Başa Dön</b>
+</a>
